<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivitiesMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_explicit_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_activities_menu_btn_explicit_intent" />

        <Button
            android:id="@+id/btn_implicit_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_activities_menu_btn_implicit_intent" />

        <Button
            android:id="@+id/btn_chooser_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_activities_menu_btn_chooser_intent" />

        <Button
            android:id="@+id/btn_pending_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_activities_menu_btn_pending_intent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>