<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivitiesMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_single_operation_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_services_menu_btn_single_operation_service" />

        <Button
            android:id="@+id/btn_linked_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_services_menu_btn_linked_service" />

        <Button
            android:id="@+id/btn_schedule_intent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_services_menu_btn_scheduled_service" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>